updated index.html with correct social media urls

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,19 +28,16 @@
   <header class="white-text-container section-container">
     <div class="text-center">
       <h1>I am Isaac Mercy</h1>
-      <p>Data Scientist</p>
+      <p>Data Scientist and Machine learning Expert</p>
       <p>
-        <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927" title="">
           <i class="fa fa-facebook"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
+        <a class="fa-icon fa-icon-2x" href="https://twitter.com/home" title="">
           <i class="fa fa-twitter"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/mercy-isaac-80953b188/" title="">
           <i class="fa fa-linkedin"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/" title="">
-          <i class="fa fa-instagram"></i>
         </a>
       </p>
     </div>
@@ -49,7 +46,7 @@
 
 
 <!-- Add your site or app content here -->
- 
+
  <div class="container">
    <div class="row">
      <div class="col-xs-12">
@@ -99,28 +96,30 @@
             <h2>Work</h2>
             <div class="work-experience">
               <small class="date">Jan 2021–Present</small>
-              <h3 class="h5 date-title">Python Programmer/ Data Scientist/ Machine learning Intern- Udemy</h3>
+              <h3 class="h5 date-title">Python Programmer/ Data Scientist/ Machine learning Intern- <a href="https://alabiansolutions.com/" title=""Alabian Solutions</a></h3>
 
               <p> Working on Python, Data Science and Machine learning Projects </p>
             </div>
 
             <div class="work-experience">
               <small class="date">Feb 2020–Mar 2020</small>
-              <h3 class="h5 date-title">Data Science Intern - Coven Labs, Benin, Edo</h3>
+              <h3 class="h5 date-title">Data Science Intern - <a href="https://labs.covenworks.com/workshop/data-science-ai-benin/" title="">Coven Labs, Benin, Edo</a></h3>
 
               <p> Created data visualization graphics translating complex datasets sets into comprehensive visual representations using python and power BI.</p>
               </p>Worked with a team on the topic, ‘Effect of gas flaring in Edo State’, presented data science findings to peers, illustrating progress made during the project period, and proffered solutions based on the data. </p>
             </div>
 
             <div class="work-experience">
-              <small class="date">2017-2015</small>
-              <h3 class="h5 date-title">Web developer - <a href="http://mashup-template.com" title="">Mashup Template</a></h3>
-              
-              <p>Fermentum leo vel orci porta non. Posuere sollicitudin aliquam ultrices sagittis. Aliquam faucibus purus in massa tempor nec.</p>
+              <small class="date">June 2018–Dec 2018</small>
+              <h3 class="h5 date-title">Process Engineering Intern - <a href="https://www.shell.com.ng/" title="">SPDC Portharcourt, Rivers</a></h3>
+
+              <p> worked with process engineers on various design projects for flowstations.</p>
+              </p>Worked with a team of engineers on a personal project to design a flowstation that would yield oil at a rate of 30000bpd </p>
             </div>
+
           </div>
         </div>
-        
+
 
         <div class="card">
           <div class="card-block">
@@ -130,9 +129,9 @@
                 <div class="education-experience">
                   <small class="date">2021-Present</small>
                   <h3 class="h5 date-title">Data Scientist/Machine Learning Engineer</h3>
-                  <p>Udemy</p>
+                  <p>Zero-to-mastery Academy,Udemy</p>
                 </div>
-                
+
               </div>
               <div class="col-md-4">
                 <div class="education-experience">
@@ -141,17 +140,11 @@
                   <p>University of Benin</p>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="education-experience">
-                  <small class="date">2012-2011</small>
-                  <h3 class="h5 date-title">Motion Design Course</h3>
-                  <p>Pascal’s Lee Studio</p>
-                </div>
               </div>
             </div>
           </div>
         </div>
-        
+
         <div class="card">
           <div class="card-block">
             <h2>Language</h2>
@@ -160,17 +153,6 @@
                 <div class="language-experience">
                   <h3 class="h5">English  <small>Fluent</small></h3>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <div class="language-experience">
-                  <h3 class="h5">French <small>Fluent</small></h3>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="language-experience">
-                  <h3 class="h5">Russian  <small>Beginner</small></h3>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -179,7 +161,7 @@
           <div class="card-block">
             <h2>Projects</h2>
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            
+
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
@@ -217,19 +199,19 @@
           </div>
           </div>
         </div>
-        
+
         <div class="card">
           <div class="card-block">
             <h2>Social Network</h2>
             <div class="row">
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://twitter.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-twitter"></i></span>@Isaac3571</a></p>
+                <p class="social-buttons"><a href="https://twitter.com/Isaac3571" title=""><span class="social-round-icon fa-icon"><i class="fa fa-twitter"></i></span>@Isaac3571</a></p>
               </div>
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://www.linkedin.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Mercy Isaac</a></p>
+                <p class="social-buttons"><a href="https://www.linkedin.com/in/mercy-isaac-80953b188/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Mercy Isaac</a></p>
               </div>
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://instagram.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-instagram"></i></span>mercyisaac435</a></p>
+                <p class="social-buttons"><a href="https://www.facebook.com/mercy.isaac.927" title=""><span class="social-round-icon fa-icon"><i class="fa fa-facebook"></i></span>Mercy Isaac</a></p>
 
               </div>
             </div>
@@ -266,23 +248,17 @@
     <div class="row">
       <div class="col-xs-12">
         <p><img src="./static/assets/images/mashup-icon.svg" alt=""></p>
-        
+
         <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
         <p>
-          <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
+          <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927" title="">
             <i class="fa fa-facebook"></i>
           </a>
-          <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
+          <a class="fa-icon fa-icon-2x" href="https://twitter.com/Isaac3571" title="">
             <i class="fa fa-twitter"></i>
           </a>
-          <a class="fa-icon fa-icon-2x" href="https://dribbble.com/" title="">
-            <i class="fa fa-dribbble"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
+          <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/mercy-isaac-80953b188/" title="">
             <i class="fa fa-linkedin"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
-            <i class="fa fa-vimeo"></i>
           </a>
         </p>
       </div>
