--- a/templates/index.html
+++ b/templates/index.html
@@ -11,29 +11,29 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico/fav.ico" rel="icon">
 
-  <title>Title page</title>  
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/favicon.ico" rel="icon">
+
+  <title>Mercy_Isaac_Portfolio</title>
 
 <link href="./static/main.d8e0d294.css" rel="stylesheet"></head>
 
 <body class="">
 
 <!-- Add your content of header -->
-<div class="background-color-layer" style="background-image: url('static/assets/images/IMG_20180805_132546.jpg')"
+<div class="background-color-layer" style="background-image: url('static/assets/images/IMG_20180805_132546.jpg');"
 ></div>
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
       <h1>I am Isaac Mercy</h1>
-      <p>Data Scientist and Machine learning Expert</p>
+      <p>Data Scientist and Machine learning Engineer</p>
       <p>
-        <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927/" title="">
           <i class="fa fa-facebook"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/home" title="">
+        <a class="fa-icon fa-icon-2x" href="https://twitter.com/Isaac3571/" title="">
           <i class="fa fa-twitter"></i>
         </a>
         <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/mercy-isaac-80953b188/" title="">
@@ -60,8 +60,8 @@
               </div>
               <div class="col-md-8">
 
-              <p>I am a python programmer with interests in Data Science and machine learning. i can work with mySQL, pandas, numpy</p>
-              <p> A graduate of chemical engineering with passion for engineering, data analyses and writing. im knowlegeable on the use of autocad and chemical simulation softwares(Unisum, DWsim</p>
+              <p>I am a python programmer with interests in Data Science and machine learning. I can work with mySQL, pandas, numpy.</p>
+              <p> A graduate of chemical engineering with passion for engineering, data analyses and writing. I'm knowledgeable on the use of autocad and chemical simulation softwares(Unisum, DWsim</p>
 
               </div>
             </div>
@@ -96,17 +96,18 @@
             <h2>Work</h2>
             <div class="work-experience">
               <small class="date">Jan 2021–Present</small>
-              <h3 class="h5 date-title">Python Programmer/ Data Scientist/ Machine learning Intern- <a href="https://alabiansolutions.com/" title=""Alabian Solutions</a></h3>
+              <h3 class="h5 date-title">Python Programmer/ Data Scientist/ Machine learning Intern- <a href="https://alabiansolutions.com/" title="programming solutions">Alabian Solutions</a></h3>
 
-              <p> Working on Python, Data Science and Machine learning Projects </p>
+
+              <p>Working on Python, Data Science and Machine learning Projects</p>
             </div>
 
             <div class="work-experience">
               <small class="date">Feb 2020–Mar 2020</small>
-              <h3 class="h5 date-title">Data Science Intern - <a href="https://labs.covenworks.com/workshop/data-science-ai-benin/" title="">Coven Labs, Benin, Edo</a></h3>
+              <h3 class="h5 date-title">Data Science Intern - <a href="https://labs.covenworks.com/workshop/data-science-ai-benin/" title="Data Science and AI">Coven Labs, Benin, Edo</a></h3>
 
-              <p> Created data visualization graphics translating complex datasets sets into comprehensive visual representations using python and power BI.</p>
-              </p>Worked with a team on the topic, ‘Effect of gas flaring in Edo State’, presented data science findings to peers, illustrating progress made during the project period, and proffered solutions based on the data. </p>
+              <p>Created data visualization graphics translating complex datasets sets into comprehensive visual representations using python and power BI.</p>
+              <p>Worked with a team on the topic, ‘Effect of gas flaring in Edo State’, presented data science findings to peers, illustrating progress made during the project period, and proffered solutions based on the data.</p>
             </div>
 
             <div class="work-experience">
@@ -114,9 +115,8 @@
               <h3 class="h5 date-title">Process Engineering Intern - <a href="https://www.shell.com.ng/" title="">SPDC Portharcourt, Rivers</a></h3>
 
               <p> worked with process engineers on various design projects for flowstations.</p>
-              </p>Worked with a team of engineers on a personal project to design a flowstation that would yield oil at a rate of 30000bpd </p>
+              <p>Worked with a team of engineers on a personal project to design a flowstation that would yield oil at a rate of 30000bpd. </p>
             </div>
-
           </div>
         </div>
 
@@ -140,7 +140,6 @@
                   <p>University of Benin</p>
                 </div>
               </div>
-              </div>
             </div>
           </div>
         </div>
@@ -153,6 +152,7 @@
                 <div class="language-experience">
                   <h3 class="h5">English  <small>Fluent</small></h3>
                 </div>
+              </div>
             </div>
           </div>
         </div>
@@ -212,7 +212,6 @@
               </div>
               <div class="col-md-3">
                 <p class="social-buttons"><a href="https://www.facebook.com/mercy.isaac.927" title=""><span class="social-round-icon fa-icon"><i class="fa fa-facebook"></i></span>Mercy Isaac</a></p>
-
               </div>
             </div>
           </div>
@@ -251,7 +250,7 @@
 
         <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
         <p>
-          <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927" title="">
+          <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/mercy.isaac.927/" title="">
             <i class="fa fa-facebook"></i>
           </a>
           <a class="fa-icon fa-icon-2x" href="https://twitter.com/Isaac3571" title="">
@@ -271,7 +270,7 @@
      scrollRevelation('.card');
   });
 </script>
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
