--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,7 @@
 <body class="">
 
 <!-- Add your content of header -->
-<div class="background-color-layer" style="background-image: url('static/assets/images/IMG_20180805_132546.jpg');"
-></div>
+<div class="background-color-layer" style="background-image: url('static/assets/images/IMG_20180805_132546.jpg');"></div>
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
@@ -43,8 +42,6 @@
     </div>
   </header>
 
-
-
 <!-- Add your site or app content here -->
 
  <div class="container">
@@ -60,7 +57,7 @@
               </div>
               <div class="col-md-8">
 
-              <p>I am a python programmer with interests in Data Science and machine learning. I can work with mySQL, pandas, numpy.</p>
+              <p>I am a python programmer with interests in Data Science and machine learning. I can work with mySQL, pandas, numpy, TensorFlow, Pytorch, matplotlib.</p>
               <p> A graduate of chemical engineering with passion for engineering, data analyses and writing. I'm knowledgeable on the use of autocad and chemical simulation softwares(Unisum, DWsim</p>
 
               </div>
@@ -72,21 +69,68 @@
           <div class="card-block">
             <h2>Projects</h2>
             <div class="row">
-              <div class="col-md-4">
-                <img src="./static/assets/images/img-02.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Amelia App</h3>
-                <p>June 2017</p>
+              <a href= https://github.com/Mercy435/Project--Heart_disease-classifier target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/heart.jpg" class="img-responsive" alt="">
+                <h3 class= "h5">Heart Disease Classifier</h3>
+
+                <p>NumPy, Pandas, Matplotlib, Seaborn, Sklearn</p>
               </div>
-              <div class="col-md-4">
-                <img src="./static/assets/images/img-03.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Portland</h3>
-                <p>March 2017</p>
+              </a>
+              <a href= https://github.com/Mercy435/Project-Dog-breed-classifier target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/dog.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Dog Breed Classifier</h3>
+
+                <p>NumPy, Pandas, Matplotlib, Seaborn, IPython, OS, TensorFlow</p>
               </div>
-              <div class="col-md-4">
-                <img src="./static/assets/images/img-04.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Denz for Nilon</h3>
-                <p>Jan 2017</p>
+              </a>
+              <a href=https://github.com/Mercy435/Project-Bulldozer_price_prediction target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/bulldozer.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Bulldozer Price Prediction</h3>
+
+                <p>NumPy, Pandas, Matplotlib, Seaborn, Sklearn</p>
               </div>
+              </a>
+            </div>
+            <div class="row">
+              <a href=  https://github.com/Mercy435/project-web-scrapping target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/web_scrapper.jpg" class="img-responsive" alt="">
+                <h3 class= "h5">Web Scrapping Project</h3>
+
+                <p>Requests, BeautifulSoup, Pprint, Json, Pandas</p>
+              </div>
+              </a>
+              <a href=  https://github.com/Mercy435/Project-Pasword-Checker target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/password.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Password Checker</h3>
+
+                <p>Request, Hashlib, Sys</p>
+              </div>
+              </a>
+              <a href=https://github.com/Mercy435/Pre-trained-image-classifier-Udacity target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/cat.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Pre-trained Image Classifier, Nanodegree project, Udacity</h3>
+
+                <p>Python Inbuilt modules</p>
+              </div>
+              </a>
+
+            </div>
+            <div class="row">
+              <a href=  https://github.com/Mercy435/Portfo  target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/portfo.JPG" class="img-responsive" alt="">
+                <h3 class= "h5">Portfolio website</h3>
+
+                <p>Flask</p>
+              </div>
+              </a>
+
             </div>
           </div>
         </div>
@@ -120,11 +164,18 @@
           </div>
         </div>
 
-
         <div class="card">
           <div class="card-block">
             <h2>Education</h2>
             <div class="row">
+              <div class="col-md-4">
+                <div class="education-experience">
+                  <small class="date">2021-Present</small>
+                  <h3 class="h5 date-title">AI programming with Python/ AWS Nanodegree foundations Course</h3>
+                  <p>Nano degree- Udacity</p>
+                </div>
+
+              </div>
               <div class="col-md-4">
                 <div class="education-experience">
                   <small class="date">2021-Present</small>
@@ -140,6 +191,7 @@
                   <p>University of Benin</p>
                 </div>
               </div>
+            </div>
           </div>
         </div>
 
@@ -153,49 +205,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-block">
-            <h2>Projects</h2>
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="./static/assets/images/img-05.jpg" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
-                </div>
-              </div>
-              <div class="item">
-                <img src="./static/assets/images/img-06.jpg" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./static/assets/images/img-08.jpg" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
-
-          </div>
           </div>
         </div>
 
@@ -240,7 +249,6 @@
    </div>
  </div>
 
-</main>
 <footer class="footer-container white-text-container text-center">
   <div class="container">
     <div class="row">
@@ -269,19 +277,10 @@
      scrollRevelation('.card');
   });
 </script>
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
 
---><script type="text/javascript" src="./static/main.bc58148c.js"></script></body>
+<script type="text/javascript" src="./static/main.bc58148c.js"></script>
+</main>
+</body>
 
 </html>
