added nanodegree final project

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,14 @@
           <div class="card-block">
             <h2>Projects</h2>
             <div class="row">
+              <a href=https://github.com/Mercy435/AI-Application-Udacity-Nanodegree-Image-Classifier-Project- target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/flowers2.jpg" class="img-responsive" alt="">
+                <h3 class="h5">AI application- Nanodegree Project, Udacity</h3>
+
+                <p>NumPy,Matplotlib, PyTorch, Json, PIL, Seaborn</p>
+              </div>
+              </a>
               <a href= https://github.com/Mercy435/Project--Heart_disease-classifier target="_blank">
                 <div class="col-md-4">
                 <img src="./static/assets/images/heart.jpg" class="img-responsive" alt="">
@@ -85,14 +93,7 @@
                 <p>NumPy, Pandas, Matplotlib, Seaborn, IPython, OS, TensorFlow</p>
               </div>
               </a>
-              <a href=https://github.com/Mercy435/Project-Bulldozer_price_prediction target="_blank">
-                <div class="col-md-4">
-                <img src="./static/assets/images/bulldozer.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Bulldozer Price Prediction</h3>
 
-                <p>NumPy, Pandas, Matplotlib, Seaborn, Sklearn</p>
-              </div>
-              </a>
             </div>
             <div class="row">
               <a href=  https://github.com/Mercy435/project-web-scrapping target="_blank">
@@ -128,6 +129,14 @@
                 <h3 class= "h5">Portfolio website</h3>
 
                 <p>Flask</p>
+              </div>
+              </a>
+              <a href=https://github.com/Mercy435/Project-Bulldozer_price_prediction target="_blank">
+                <div class="col-md-4">
+                <img src="./static/assets/images/bulldozer.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Bulldozer Price Prediction</h3>
+
+                <p>NumPy, Pandas, Matplotlib, Seaborn, Sklearn</p>
               </div>
               </a>
 
